@@ -2,6 +2,8 @@ v0.0.7.21 (2011-05-24)
 ==================
   New features:
 	-- Adaptive JPEG mode (bandwidth constrained)
+	-- Use an existing display
+	-- Disable randr
 
 
 v0.0.7.16 (2010-08-25)
